paleta de colores agregada

--- a/public/styles.scss
+++ b/public/styles.scss
@@ -5,6 +5,13 @@ html {
   font-size: 62.5%;
 }
 
+:root {
+  --negro: #090909;
+  --blanco: #F1ECE7;
+  --amarillo: #F2AA1F;
+  --azul: #114358;
+}
+
 *,
 *::before,
 *::after {
