--- a/src/templates/header/header.html
+++ b/src/templates/header/header.html
@@ -1,1 +1,13 @@
-<header class = "header"></header>
+<header class = "header">
+    <picture>
+        <img
+          loading="lazy"
+          src="../../assets/images/logo2.png"
+          width="500"
+          height="300"
+          class="icon"
+          alt="imagen del icono"
+        />
+      </picture>
+      <p class="header__title">John Doe Pub</p>
+</header>
