--- a/src/templates/header/header.scss
+++ b/src/templates/header/header.scss
@@ -1,1 +1,20 @@
+.header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    height: 10vh;
+    background-color: var(--negro);
 
+    .icon {
+        width: 10rem;
+        height: 10rem;
+    }
+
+    .header__title {
+        font-family: var(--title);
+        color: var(--blanco);
+        margin-right: 3rem;
+        font-size: 3rem;
+    }
+}
