imagenes en el header actualizadas

--- a/src/templates/header/header.html
+++ b/src/templates/header/header.html
@@ -1,8 +1,10 @@
 <header class = "header">
     <picture>
+      <source srcset="../../assets/images/barIcon .avif" type="image/avif" />
+      <source srcset="../../assets/images/barIcon .webp" type="image/webp" />
         <img
           loading="lazy"
-          src="../../assets/images/logo2.png"
+          src="../../assets/images/barIcon.png"
           width="500"
           height="300"
           class="icon"
