--- a/src/templates/header/header.html
+++ b/src/templates/header/header.html
@@ -1,7 +1,7 @@
 <header class = "header">
     <picture>
-      <source srcset="../../assets/images/barIcon .avif" type="image/avif" />
-      <source srcset="../../assets/images/barIcon .webp" type="image/webp" />
+      <source srcset="../../assets/images/barIcon.avif" type="image/avif">
+      <source srcset="../../assets/images/barIcon.webp" type="image/webp">
         <img
           loading="lazy"
           src="../../assets/images/barIcon.png"
