HTML de la seccion drinks terminado

--- a/src/components/drinks/drinks.html
+++ b/src/components/drinks/drinks.html
@@ -2,12 +2,12 @@
   <div class="drink__card__content">
     <img src="#" alt="drink" />
     <h3 class="drink__title"></h3>
-    <h3 class="drink__id"></h3>
     <p class="drink__instruccion">
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius vero nemo
       illum voluptate expedita obcaecati, vitae error sequi dicta commodi atque
       veniam cupiditate enim tempora reiciendis a delectus consequuntur
       aspernatur.
     </p>
+    <a href="#" id="" class="button__drink btn">Leer mas</a>
   </div>
 </div>
