--- a/src/sass/_utilities.scss
+++ b/src/sass/_utilities.scss
@@ -1,11 +1,24 @@
+.avif .nosotros-grid {
+  background-image: url("../src/assets/images/nosotros.avif");
+}
+
+.notavif.notwebp .nosotros-grid {
+  background-image: url("../src/assets/images/nosotros.jpg");
+}
+
+.webp .nosotros-grid {
+  background-image: url("../src/assets/images/nosotros.webp");
+  background-repeat: no-repeat;
+}
+
 .btn {
-    border: none;
-    background-color: var(--amarillo);
-    color: var(--blanco);
-    font-family: var(--title);
-    font-size: 2.5rem;
-    cursor: pointer;
-    padding: 1rem;
-    margin-bottom: 1.5rem;
-    text-decoration: none;
+  border: none;
+  background-color: var(--amarillo);
+  color: var(--blanco);
+  font-family: var(--title);
+  font-size: 2.5rem;
+  cursor: pointer;
+  padding: 1rem;
+  margin-bottom: 1.5rem;
+  text-decoration: none;
 }
