se actualizo el link de la lista

--- a/src/components/drinks/drinksList.html
+++ b/src/components/drinks/drinksList.html
@@ -17,6 +17,6 @@
       Conoce todas las deliciosas bebidas que te podemos ofrecer, esperamos su
       siguiente visita con gusto.
     </p>
-    <a href="#" id="" class="button__drink btn">Ver todos los tragos</a>
+    <a href="#/drinkList" id="" class="button__drink__list button__drink btn">Ver todos los tragos</a>
   </div>
 </div>
