--- a/src/templates/header/header.html
+++ b/src/templates/header/header.html
@@ -1,15 +1,17 @@
-<header class = "header">
+<header class="header">
+  <a class="logo__link" href="/">
     <picture>
-      <source srcset="../../assets/images/barIcon.avif" type="image/avif">
-      <source srcset="../../assets/images/barIcon.webp" type="image/webp">
-        <img
-          loading="lazy"
-          src="../../assets/images/barIcon.png"
-          width="500"
-          height="300"
-          class="icon"
-          alt="imagen del icono"
-        />
-      </picture>
-      <p class="header__title">John Doe Pub</p>
+      <source srcset="../../assets/images/barIcon.avif" type="image/avif" />
+      <source srcset="../../assets/images/barIcon.webp" type="image/webp" />
+      <img
+        loading="lazy"
+        src="../../assets/images/barIcon.png"
+        width="500"
+        height="300"
+        class="icon"
+        alt="imagen del icono"
+      />
+    </picture>
+  </a>
+  <p class="header__title">John Doe Pub</p>
 </header>
