link de las tarjetas de bebidas actualizado

--- a/src/components/drinks/drinks.html
+++ b/src/components/drinks/drinks.html
@@ -8,6 +8,6 @@
       veniam cupiditate enim tempora reiciendis a delectus consequuntur
       aspernatur.
     </p>
-    <a href="#" id="" class="button__drink btn">Leer mas</a>
+    <a href="#/singleDrink" id="" class="button__drink btn">Leer mas</a>
   </div>
 </div>
