html y estilos de singleDrink terminados

--- a/src/components/singleDrink/singleDrink.html
+++ b/src/components/singleDrink/singleDrink.html
@@ -1,1 +1,10 @@
-<h1>Trago</h1>
+<main class="singleDrink__container">
+  <section class="singleDrink__info">
+    <img class="single__image" src="#" alt="" />
+    <h3 class="single__title"></h3>
+    <h4 class="single__id"></h4>
+    <p class="single__instruccion"></p>
+  </section>
+
+  <section class="ingredientes"></section>
+</main>
