link de la ruta principal corregido

--- a/src/templates/header/header.html
+++ b/src/templates/header/header.html
@@ -1,5 +1,5 @@
 <header class="header">
-  <a class="logo__link" href="/">
+  <a class="logo__link" href="#/">
     <picture>
       <source srcset="../../assets/images/barIcon.avif" type="image/avif" />
       <source srcset="../../assets/images/barIcon.webp" type="image/webp" />
