--- a/src/components/inicio/inicio.scss
+++ b/src/components/inicio/inicio.scss
@@ -93,6 +93,7 @@
   .nosotros-grid {
     display: grid;
     grid-template-rows: repeat(2, 40rem);
+    background-repeat: no-repeat;
 
     @include mixins.mediaUp(md) {
       background-image: linear-gradient(
@@ -107,6 +108,7 @@
       grid-template-columns: repeat(2, 1fr);
       grid-template-rows: repeat(1, 1fr);
       background-size: cover;
+      background-position: center 91%;
 
       .nosotros-text-container {
         grid-column-start: 2;
