HTML y CSS del cargador terminados

--- a/src/components/singleDrink/singleDrink.html
+++ b/src/components/singleDrink/singleDrink.html
@@ -1,5 +1,6 @@
 <main class="singleDrink__container">
   <section class="singleDrink__info">
+    <h3 class="carga">cargando...</h3>
     <img class="single__image" src="#" alt="" />
     <h3 class="single__title"></h3>
     <h4 class="single__id"></h4>
